# backend/api/impl.go
@@ -935,6 +935,10 @@ func (s *Server) TenantsList(w http.ResponseWriter, r *http.Request, params Tena
 			email,
 			mobile,
 			phone,
+			paid_from,
+			paid_to,
+			rental_amount,
+			frequency,
 			original_start_date,
 			start_date,
 			end_date,
@@ -1021,6 +1025,10 @@ func (s *Server) TenantsCreate(w http.ResponseWriter, r *http.Request) {
 			email,
 			mobile,
 			phone,
+			paid_from,
+			paid_to,
+			rental_amount,
+			frequency,
 			original_start_date,
 			start_date,
 			end_date,
@@ -1035,13 +1043,21 @@ func (s *Server) TenantsCreate(w http.ResponseWriter, r *http.Request) {
 			$6,
 			$7,
 			$8,
-			$9
+			$9,
+			$10,
+			$11,
+			$12,
+			$13
 		) RETURNING 
 		 	id,
 			name,
 			email,
 			mobile,
 			phone,
+			paid_from,
+			paid_to,
+			rental_amount,
+			frequency,
 			original_start_date,
 			start_date,
 			end_date,
@@ -1062,6 +1078,10 @@ func (s *Server) TenantsCreate(w http.ResponseWriter, r *http.Request) {
 		payload.Email,
 		payload.Mobile,
 		payload.Phone,
+		payload.PaidFrom,
+		payload.PaidTo,
+		payload.RentalAmount,
+		payload.Frequency,
 		payload.OriginalStartDate,
 		payload.StartDate,
 		payload.EndDate,
@@ -1101,6 +1121,10 @@ func (s *Server) TenantsArchive(w http.ResponseWriter, r *http.Request, id strin
 			email,
 			mobile,
 			phone,
+			paid_from,
+			paid_to,
+			rental_amount,
+			frequency,
 			original_start_date,
 			start_date,
 			end_date,
@@ -1142,6 +1166,10 @@ func (s *Server) TenantsGet(w http.ResponseWriter, r *http.Request, id string) {
 			email,
 			mobile,
 			phone,
+			paid_from,
+			paid_to,
+			rental_amount,
+			frequency,
 			original_start_date,
 			start_date,
 			end_date,
@@ -1190,14 +1218,18 @@ func (s *Server) TenantsUpdate(w http.ResponseWriter, r *http.Request, id string
 			email = $2,
 			mobile = $3,
 			phone = $4,
-			original_start_date = $5,
-			start_date = $6,
-			end_date = $7,
-			termination_date = $8,
-			termination_reason = $9,
-			vacate_date = $10,
-			is_archived = $11,
-			property_id = $12,
+			paid_from = $5,
+			paid_to = $6,
+			rental_amount = $7,
+			frequency = $8,
+			original_start_date = $9,
+			start_date = $10,
+			end_date = $11,
+			termination_date = $12,
+			termination_reason = $13,
+			vacate_date = $14,
+			is_archived = $15,
+			property_id = $16,
 			updated_at = NOW()
 		WHERE id = $13
 		RETURNING 
@@ -1206,6 +1238,10 @@ func (s *Server) TenantsUpdate(w http.ResponseWriter, r *http.Request, id string
 			email,
 			mobile,
 			phone,
+			paid_from,
+			paid_to,
+			rental_amount,
+			frequency,
 			original_start_date,
 			start_date,
 			end_date,
@@ -1220,7 +1256,27 @@ func (s *Server) TenantsUpdate(w http.ResponseWriter, r *http.Request, id string
 
 	var updatedTenant Tenant
 
-	row := s.dbpool.QueryRow(context.Background(), sql, payload.Name, payload.Email, payload.Mobile, payload.Phone, payload.OriginalStartDate, payload.StartDate, payload.EndDate, payload.TerminationDate, payload.TerminationReason, payload.VacateDate, payload.IsArchived, payload.PropertyId, id)
+	row := s.dbpool.QueryRow(
+		context.Background(),
+		sql,
+		payload.Name,
+		payload.Email,
+		payload.Mobile,
+		payload.Phone,
+		payload.PaidFrom,
+		payload.PaidTo,
+		payload.RentalAmount,
+		payload.Frequency,
+		payload.OriginalStartDate,
+		payload.StartDate,
+		payload.EndDate,
+		payload.TerminationDate,
+		payload.TerminationReason,
+		payload.VacateDate,
+		payload.IsArchived,
+		payload.PropertyId,
+		id,
+	)
 
 	updatedTenant, err = scanTenant(row)
 	if err != nil {
@@ -1255,6 +1311,10 @@ func scanTenant(scanner interface {
 		&tenant.Email,
 		&tenant.Mobile,
 		&tenant.Phone,
+		&tenant.PaidFrom,
+		&tenant.PaidTo,
+		&tenant.RentalAmount,
+		&tenant.Frequency,
 		&originalStartDate,
 		&startDate,
 		&endDate,
